--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "3dprint",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "author": "PostMaxxx",
   "license": "ISC",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss-normalize": "^10.0.1",
     "react-redux": "^8.0.5",
