mobile nav styles modified

--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version",
+      ">2%",
       "not dead",
       "not op_mini all"
     ],
