bugs fixed: amount not reset after added item, duplicate items in cart, can leave 0 amount in cart

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "3dprint",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://postmaxxx.github.io/3DIrk/",
   "private": true,
   "author": "PostMaxxx",
   "license": "ISC",
