--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "3dprint",
   "version": "0.1.0",
-  "homepage": "https://postmaxxx.github.io/3DIrk/",
+  "homepage": ".",
   "private": true,
   "author": "PostMaxxx",
   "license": "ISC",
@@ -43,7 +43,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "create": "npm run build && serve -s build"
+    "create": "react-scripts build && serve -s build"
   },
   "eslintConfig": {
     "extends": [
@@ -77,6 +77,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
+    "serve": "^14.2.0",
     "style-loader": "^3.3.2",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
