--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "3dprint",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://postmaxxx.github.io/3DIrk/",
   "private": true,
   "author": "PostMaxxx",
   "license": "ISC",
@@ -18,23 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "uniqid": "^5.4.0",
-    "url": "^0.11.0",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.5.4",
-    "workbox-broadcast-update": "^6.5.4",
-    "workbox-cacheable-response": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-google-analytics": "^6.5.4",
-    "workbox-navigation-preload": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-range-requests": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,8 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "create": "react-scripts build && serve -s build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -77,11 +63,10 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
-    "serve": "^14.2.0",
     "style-loader": "^3.3.2",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.84.1",
-    "webpack-cli": "^5.1.1"
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
   }
 }
