--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy_old": "npm run build && npx workbox injectManifest workbox-config.js",
-    "deploy": "gh-pages -d build",
     "servew": "webpack serve --mode development",
     "predeploy": "webpack --mode production",
+    "deploy": "gh-pages -d dist",
     "buildw": "webpack --mode production"
   },
   "eslintConfig": {
@@ -70,6 +70,7 @@
     "@babel/preset-react": "^7.22.3",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
     "gh-pages": "^5.0.0",
