--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@
 /build
 /dist
 
+#backend
+/backend/node_modules
+backend/.env
+
+
 # misc
 .DS_Store
 .env.local
@@ -23,3 +28,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
