--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,5 @@
 {
-    "compilerOptions": {
-      "sourceMap": true,
-      "target": "es2017",
-      "outDir": "./dist",
-      "baseUrl": "./src"
-    },
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "node_modules"
-    ]
-  }
+  "compilerOptions": {
+      "lib": ["es6"]
+    }
+}
