--- a/backend/src/ts.config.json
+++ b/backend/src/ts.config.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
-        "lib": ["es6"],
+        "lib": ["ES6"],
         "types": ["node"],
         "target": "ES2020",
         "module": "CommonJS",
         "esModuleInterop": true,
-        "moduleResolution": "node",
+        "moduleResolution": "node"
       }
 }
