--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "@splidejs/react-splide": "^0.7.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -40,16 +41,11 @@
     "eject": "react-scripts eject",
     "predeploy_old": "npm run build && npx workbox injectManifest workbox-config.js",
     "deploy_old": "gh-pages -d build",
-    
-    
     "serverfe": "webpack serve --mode development",
     "buildfe": "webpack --mode production",
-    
     "startbe": "npm run start --prefix backend",
     "serverbe": "npm run server --prefix backend",
-    
     "dev": "concurrently \"npm run serverfe\" \"npm run serverbe\"",
-
     "predeploy": "webpack --mode production",
     "deploy": "gh-pages -d dist"
   },
