--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
-      "lib": ["es6"]
+      "lib": [
+        "dom",
+        "dom.iterable",
+        "esnext"
+      ],
+      
     }
 }
