--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "firebase": "^9.18.0",
+    "form-data": "^4.0.0",
+    "node-fetch": "^2.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
