--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.11",
     "firebase": "^9.18.0",
     "form-data": "^4.0.0",
+    "moment": "^2.29.4",
     "node-fetch": "^2.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
