--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./src/app.ts",
-    "server": "nodemon ./src/app.ts"
+    "server": "nodemon ./src/app.ts",
+    "serverprod": "set NODE_ENV=production && nodemon ./src/app.ts"
   },
   "author": "Maksim Postnikov, max@postnikov.dev",
   "license": "ISC",
