--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "form-data": "^4.0.0",
     "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.12",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
