--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 #backend
 /backend/node_modules
 backend/.env
+backend/.env.development
+backend/.env.production
 backend/uploads
 backend/data
 backend/userFiles
@@ -23,9 +25,9 @@ backend/userFiles
 # misc
 .DS_Store
 .env.local
-.env.development.local
 .env.test.local
-.env.production.local
+.env.development
+.env.production
 .env
 
 npm-debug.log*
