--- a/.gitignore
+++ b/.gitignore
@@ -9,17 +9,17 @@
 /coverage
 
 # production
-/build
-/dist
+build/
+build
+dist/
+/dist/
 
 #backend
-/backend/node_modules
+backend/node_modules
 backend/.env
 backend/.env.development
 backend/.env.production
-backend/uploads
-backend/data
-backend/userFiles
+
 
 
 # misc
