--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./src/app.ts",
     "serverdev": "set NODE_ENV=development && nodemon ./src/app.ts",
-    "serverprod": "set NODE_ENV=production && nodemon ./src/app.ts"
+    "serverprod": "export NODE_ENV=production && nodemon ./src/app.ts"
   },
   "author": "Maksim Postnikov, max@postnikov.dev",
   "license": "ISC",
