--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./src/app.ts",
     "serverdev": "set NODE_ENV=development && nodemon ./src/app.ts",
-    "serverprod": "export NODE_ENV=production && nodemon ./src/app.ts"
+    "serverprod": "export NODE_ENV=production && node ./src/app.ts"
   },
   "author": "Maksim Postnikov, max@postnikov.dev",
   "license": "ISC",
@@ -25,12 +25,12 @@
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.12",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "concurrently": "^8.1.0",
     "dotenv": "^16.1.3",
-    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
