--- a/backend/package.json
+++ b/backend/package.json
@@ -27,12 +27,12 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.12",
     "sharp": "^0.32.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "concurrently": "^8.1.0",
-    "dotenv": "^16.1.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "dotenv": "^16.1.3"
   }
 }
