--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "serverdev": "set NODE_ENV=development && nodemon ./src/app.ts",
     "serverprod": "export NODE_ENV=production && nodemon ./src/app.ts",
     "build": "tsc",
-    "serverprodjs": "npm run build && set NODE_ENV=production && nodemon ./dist/app.js"
+    "serverprodjs": "npm run build && set NODE_ENV=production && node ./dist/app.js"
   },
   "author": "Maksim Postnikov, max@postnikov.dev",
   "license": "ISC",
@@ -27,12 +27,12 @@
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.12",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "dotenv": "^16.1.3",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "concurrently": "^8.1.0",
-    "dotenv": "^16.1.3",
-    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
