--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "serverdev": "set NODE_ENV=development && nodemon ./src/app.ts",
     "serverprod": "export NODE_ENV=production && nodemon ./src/app.ts",
     "build": "tsc",
-    "serverprodjs": "npm run build && set NODE_ENV=production && node ./dist/app.js"
+    "serverprodjs": "npm run build && set NODE_ENV=production && node ./dist/app.js",
+    "serverssl": "tsc && set NODE_ENV=production && node server.js"
   },
   "author": "Maksim Postnikov, max@postnikov.dev",
   "license": "ISC",
@@ -18,20 +19,21 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "form-data": "^4.0.0",
     "fs-extra": "^11.1.1",
+    "greenlock-express": "^4.0.3",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.12",
-    "sharp": "^0.32.1",
-    "dotenv": "^16.1.3",
-    "nodemon": "^2.0.22"
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "concurrently": "^8.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
