--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,8 @@
-VERSION=1.02
-SITENAME=https://postmaxxx.github.io/3DIrk/
+REACT_APP_VERSION=1.02
+REACT_APP_SITENAME=https://postmaxxx.github.io/3DIrk/
 
 REACT_APP_TG_TOK=6231173548:AAGzgUoO-zHTG2bzAFPOp8KZxd9Iv9ddH3o
 REACT_APP_CHT_ID=-1001849476847
 REACT_APP_CHT_LINK=@printing38
-
-REACT_APP_IMGBB=f3854b81f76161e80a6d7a91eb4cfeb6
 
 REACT_BACK_URL=http://localhost:3030
