--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "serverprod": "export NODE_ENV=production && nodemon ./src/app.ts",
     "build": "tsc",
     "serverprodjs": "npm run build && set NODE_ENV=production && node ./dist/app.js",
-    "serverssl": "tsc && set NODE_ENV=production && node server.js"
+    "serverssl": "tsc && set NODE_ENV=production && node server.js",
+    "serveraws": "npm run build && set NODE_ENV=production && pm2 start ./dist/app.js --watch"
   },
   "author": "Maksim Postnikov, max@postnikov.dev",
   "license": "ISC",
