--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "homepage": "https://postmaxxx.github.io/3DIrk/",
   "private": true,
-  "author": "PostMaxxx",
+  "author": "Postnikov Maksim",
   "license": "ISC",
   "proxy": "http://localhost:5000",
   "dependencies": {
