thene no-switch bug fixed, carouselmax smooth added

--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,6 @@ REACT_APP_CHT_ID=-1001849476847
 REACT_APP_CHT_LINK=@printing38
 
 REACT_BACK_URL=https://devback.net:5000
+
+
+REACT_SITENAME=https://postmaxxx.github.io/3DIrk/
