--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
       "last 20 chrome version",
       "last 20 firefox version",
       "last 20 safari version",
-      ">.5%",
+      ">2%",
       "not dead",
       "not op_mini all"
     ],
@@ -80,6 +80,7 @@
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
+    "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
