--- a/package.json
+++ b/package.json
@@ -7,15 +7,7 @@
   "license": "ISC",
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@redux-devtools/extension": "^3.2.5",
     "@splidejs/react-splide": "^0.7.12",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.18",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
     "firebase": "^9.18.0",
     "form-data": "^4.0.0",
     "moment": "^2.29.4",
@@ -42,6 +34,7 @@
     "startprod": "set NODE_ENV=production&& react-scripts start",
     "build": "react-scripts build 2",
     "test": "react-scripts test",
+    "jest": "jest --coverage",
     "eject": "react-scripts eject",
     "predeploy_old": "npm run build && npx workbox injectManifest workbox-config.js",
     "deploy_old": "gh-pages -d build",
@@ -78,28 +71,46 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.22.15",
+    "@redux-devtools/extension": "^3.2.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.4",
+    "@types/jsdom": "^21.1.2",
+    "@types/node": "^16.18.18",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-test-renderer": "^18.0.1",
     "autoprefixer": "^10.4.15",
+    "babel-jest": "^29.6.4",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.0",
     "dotenv-webpack": "^8.0.1",
+    "file-saver": "^2.0.5",
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.6.4",
+    "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-normalize": "^10.0.1",
     "purgecss-webpack-plugin": "^5.0.0",
     "react-redux": "^8.0.5",
+    "react-test-renderer": "^18.2.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
-    "typescript": "^4.9.4",
+    "typescript": "^5.2.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
