--- a/package.json
+++ b/package.json
@@ -71,12 +71,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
+    "@babel/plugin-proposal-decorators": "^7.22.15",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
     "@babel/preset-typescript": "^7.22.15",
     "@redux-devtools/extension": "^3.2.5",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.4",
@@ -88,6 +89,7 @@
     "autoprefixer": "^10.4.15",
     "babel-jest": "^29.6.4",
     "babel-loader": "^9.1.2",
+    "babel-plugin-react-require": "^4.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
