--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-normalize": "^10.0.1",
