--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-test-renderer": "^18.0.1",
+    "@types/redux-mock-store": "^1.0.3",
     "autoprefixer": "^10.4.15",
     "babel-jest": "^29.6.4",
     "babel-loader": "^9.1.2",
@@ -106,6 +107,7 @@
     "purgecss-webpack-plugin": "^5.0.0",
     "react-redux": "^8.0.5",
     "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
