--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^22.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-normalize": "^10.0.1",
