--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "serverbeprod": "npm run serverprod --prefix backend",
     "dev": "concurrently \"npm run serverfedev\" \"npm run serverbedev\"",
     "predeploy": "webpack --mode production",
-    "deploy": "gh-pages -d dist",
-    "s": ""
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
