--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 18
       - name: Install deps
-        run: npm ci
+        run: npm ci --force
       - name: Build backend
         run: npm run build
       - uses: actions/upload-artifact@v3
