--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "serverfeprod": "webpack serve --mode production",
     "buildfe": "webpack --mode production",
     "startbe": "npm run start --prefix backend",
+    "buildbe": "npm run build --prefix backend",
     "serverbedev": "npm run serverdev --prefix backend",
     "serverbeprod": "npm run serverprod --prefix backend",
     "dev": "concurrently \"npm run serverfedev\" \"npm run serverbedev\"",
