--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -6,6 +6,20 @@ on:
 jobs: 
   deploy:
     runs-on: ubuntu-latest
+    env:
+      mongoUri: ${{ secrets.MONGO_URI }}
+      jwtSecret: ${{ secrets.JWT_SECRET }}
+      admEmail: ${{ secrets.ADM_EMAIL }}
+      dbName: ${{ secrets.DB_NAME }}
+      tgToken: ${{ secrets.TG_TOKEN }}
+      chatId: ${{ secrets.CHAT_ID }}
+      chatLink: ${{ secrets.CHAT_LINK }}
+      pathToStorage: ${{ secrets.PATH_TO_STORAGE }}
+      PORT: ${{ secrets.PORT }}
+      awsAC: ${{ secrets.AWS_AC }}
+      AWS.awsSAC: ${{ secrets.SAC }}
+      awsRegion: ${{ secrets.AWS_REGION }}
+      s3BucketName: ${{ secrets.S3_BUCKET_NAME }}
     steps:
       - name: Get repo code
         uses: actions/checkout@v4
@@ -20,7 +34,7 @@ jobs:
       - name: Build backend
         run: |
           cd backend
-          npm run build
+          npm run deploy
       - uses: actions/upload-artifact@v3
         with:
           name: built-files
@@ -29,3 +43,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: built-files
+      - name: Deploy to Server 1
+        uses: easingthemes/ssh-deploy@main
+        with:
+          SOURCE: "dist/"
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          REMOTE_HOST: ${{ secrets.HOST_DNS }}
+          REMOTE_USER: ${{ secrets.USERNAME }}
+          TARGET: ${{ secrets.TARGET_DIR }}
