--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           name: built-files
       - name: Deploy to Server 1
-        uses: burnett01/rsync-deployments@6
+        uses: burnett01/rsync-deployments@v6
         with:
           switches: -avzr --delete
           path: ./dist
