--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -47,7 +47,7 @@ jobs:
         uses: burnett01/rsync-deployments@5.1
         with:
           switches: -avzr --delete
-          path: ./dist
+          path: ./backend/dist
           remote_path: /home/ubuntu/3dapp/
           remote_host: ${{ secrets.EC2_HOST }}
           remote_user: ${{ secrets.USERNAME }}
