--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -47,8 +47,8 @@ jobs:
         uses: burnett01/rsync-deployments@5.1
         with:
           switches: -avzr --delete
-          path: ./backend/dist
-          remote_path: /home/ubuntu/3dapp/
+          path: ./*
+          remote_path: /tmp/
           remote_host: ${{ secrets.EC2_HOST }}
           remote_user: ${{ secrets.USERNAME }}
           remote_key: ${{ secrets.EC2_SSH_KEY }}
