--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           switches: -avzr --delete
           path: backend/dist/
-          remote_path: /home/ubuntu/strezhen/
+          remote_path: /home/ubuntu/strezhen/app/
           remote_host: ${{ secrets.EC2_HOST }}
           remote_user: ${{ secrets.EC2_USERNAME }}
           remote_key: ${{ secrets.EC2_SSH_KEY }}
