workflow to AWS, exclude for env and node_modules v2

--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Deploy to Server 1
         uses: burnett01/rsync-deployments@6.0.0
         with:
-          switches: -avzr --delete --exclude="node_modules/" --include="" --filter=".env.*"
+          switches: -avzr --delete --exclude="node_modules" --exclude=".env.*" --filter="."
           path: backend/dist/
           remote_path: /home/ubuntu/strezhen/app/
           remote_host: ${{ secrets.EC2_HOST }}
