workflow to AWS, build app on ec2 v1

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "serverdev": "set NODE_ENV=development&& nodemon ./src/app.ts",
     "serverprod": "export NODE_ENV=production&& nodemon ./src/app.ts",
     "build": "tsc",
-    "deploy": "tsc && set NODE_ENV=deploy",
+    "deploy": "tsc",
     "serverprodjs": "npm run build && set NODE_ENV=production&& node ./dist/app.js",
     "serverssl": "tsc && set NODE_ENV=production&& node server.js",
     "serveraws": "npm run build && set NODE_ENV=production&& pm2 start ./dist/app.js --watch"
