--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -67,7 +67,7 @@ jobs:
 
               # Now we have got the access of EC2 and we will start the deploy .
               cd /home/ubuntu/strezhen/app &&
-              sudo npm i --force &&
+              sudo npm i --force || true &&
               pm2 delete --silent 3d_ci-cd &&
               pm2 start --name 3d_ci-cd npm -- run serverprodjs --env-update &&
               pm2 save
