workflow to AWS, based on build folder v10

--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -69,7 +69,7 @@ jobs:
               cd /home/ubuntu/strezhen &&
               sudo chmod -R 777 ./app || true &&
               cd /home/ubuntu/strezhen/app &&
-              sudo npm i &&
+              sudo npm i || true &&
               sudo pm2 delete --silent 3d_ci-cd &&
               sudo pm2 start --name 3d_ci-cd npm -- run serverprodjs --env-update &&
               sudo pm2 save
