workflow to AWS, based on build folder v12

--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -70,4 +70,5 @@ jobs:
               sudo chmod -R 777 ./app &&
               cd /home/ubuntu/strezhen/app &&
               sudo npm ci &&
+              echo 123
               '
