--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -70,5 +70,8 @@ jobs:
               sudo chmod -R 777 ./app &&
               cd /home/ubuntu/strezhen/app &&
               sudo npm ci &&
-              echo 123
+              echo 123 &&
+              sudo pm2 delete --silent 3d_ci-cd &&
+              sudo pm2 start --name 3d_ci-cd npm -- run serverprodjs --env-update &&
+              sudo pm2 save
               '
