--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -71,10 +71,10 @@ jobs:
               cd /home/ubuntu/strezhen/app &&
               sudo npm ci &&
               echo 1 &&
-              sudo pm2 delete --silent 3d_ci-cd &&
+              pm2 delete --silent 3d_ci-cd --watch &&
               echo 2 &&
-              sudo pm2 start --name 3d_ci-cd --watch . npm -- run serverprod --env-update &&
+              pm2 start --name 3d_ci-cd npm -- run serverprodjs --env-update &&
               echo 3 &&
-              sudo pm2 save &&
+              pm2 save &&
               echo 4
               '
