workflow to AWS, based on build folder v18

--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -71,7 +71,7 @@ jobs:
               cd /home/ubuntu/strezhen/app &&
               npm i &&
               echo Deps installed &&
-              pm2 delete --silent 3d_ci-cd --watch &&
+              pm2 delete --silent 3d_ci-cd --watch || true &&
               echo pm2: 3d_ci-cd removed &&
               pm2 start --name 3d_ci-cd npm -- run serverprodjs &&
               echo pm2: 3d_ci-cd installed &&
