workflow to AWS, based on build folder v18

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,12 @@
     "serverdev": "set NODE_ENV=development&& nodemon ./src/app.ts",
     "serverprod": "export NODE_ENV=production&& nodemon ./src/app.ts",
     "build": "tsc",
-    "serverprodjs": "npm run build && set NODE_ENV=production&& node ./dist/app.js",
+    "serverprodjs": "npm run build && set NODE_ENV=production && node ./dist/app.js",
     "serverssl": "tsc && set NODE_ENV=production&& node server.js",
     "serveraws": "npm run build && set NODE_ENV=production&& pm2 start ./dist/app.js --watch",
-    "server_ci-cd": "set NODE_ENV=production && node ./dist/app.js"
+    "server_ci-cd": "npm run build && set NODE_ENV=production && nodemon ./dist/app.js"
   },
-  "author": "Maksim Postnikov, max@postnikov.dev",
+  "author": "WiseUp Studio, Maksim Postnikov, max@postnikov.dev",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1415.0",
