--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -73,7 +73,7 @@ jobs:
               echo Deps installed &&
               pm2 delete --silent 3d_ci-cd --watch || true &&
               echo pm2: 3d_ci-cd removed &&
-              pm2 start --name 3d_ci-cd npm -- run serverprodjs &&
+              pm2 start --name 3d_ci-cd npm -- run server_ci-cd &&
               echo pm2: 3d_ci-cd installed &&
               pm2 save &&
               echo Finish
