--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "serverprodjs": "npm run build && set NODE_ENV=production && node ./dist/app.js",
     "serverssl": "tsc && set NODE_ENV=production&& node server.js",
     "serveraws": "npm run build && set NODE_ENV=production&& pm2 start ./dist/app.js --watch",
-    "server_ci-cd": "npm run build && set NODE_ENV=production && nodemon ./dist/app.js"
+    "server_ci-cd": "export NODE_ENV=production && node ./dist/app.js"
   },
   "author": "WiseUp Studio, Maksim Postnikov, max@postnikov.dev",
   "license": "ISC",
