--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,9 @@
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.12",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "compression": "^1.7.4",
