--- a/.github/workflows/test-deploy-ec2.yml
+++ b/.github/workflows/test-deploy-ec2.yml
@@ -2,6 +2,8 @@ name: Test, deploy to EC2
 on: 
   workflow_dispatch:
   pull_request:
+    branches:
+      - "master"
     types: [opened, edited, reopened]
 jobs: 
   deploy:
